--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -432,8 +432,9 @@
                             <h4 class="chakra-petch-regular">Character</h4>  
                             <div class="Character" style="height: 300px; width: 300px;">
                                 <% if(BasicPercent === 0 && TracePercent === 0 && ExplainPercent === 0 && WritePercent === 0){ %>
-                                    none
-                                    <img src="https://cdn-icons-png.flaticon.com/512/15547/15547949.png " alt="" style="margin: 20px; width: 150px;">
+                                    <img src="/images/IMG_3241.png" alt="Knowledge" style=" width: 200px; height: 200px;">
+                                    <p style="margin-bottom: 0px;"><b>ROOKIE</b>
+                                    <p>Rookie</p>
                                 <% } else { %> 
                                 <% if(BasicPercent > TracePercent && BasicPercent > ExplainPercent && BasicPercent > WritePercent){ %>
                                     <img src="/images/IMG_3171.webp" alt="Knowledge" style=" width: 200px; height: 200px;">
@@ -493,6 +494,9 @@
                                 <% } %>
                                 <% if(WritePercent === BasicPercent && WritePercent === TracePercent && WritePercent === ExplainPercent){ %>
                                     k = t = e = w
+                                    <img src="/images/IMG_3242.png" alt="Knowledge" style=" width: 200px; height: 200px;">
+                                    <p style="margin-bottom: 0px;"><b>KING</b>
+                                    <p>King</p>
                                 <% } %>
                                 <% } %>
                             </div>
