--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -48,12 +48,68 @@
             opacity: 0.6;
         }
         .Character {
-            width: 300px;
-            height: 300px;
+            width: 400px; /* Increased from 300px */
+            height: 400px; /* Increased from 300px */
             background-color: #f1f1f1;
             border-radius: 10px;
-            display: block;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
             text-align: center;
+            padding: 20px;
+        }
+
+        /* Adjust character image size */
+        .Character img {
+            width: 300px !important; /* Increased from 200px */
+            height: 300px !important; /* Increased from 200px */
+            margin-bottom: 10px;
+        }
+
+        /* Character text styles */
+        .Character p {
+            margin: 5px 0;
+            font-size: 1.2rem; /* Increased font size */
+        }
+
+        .Character p:first-of-type {
+            font-size: 1.5rem; /* Larger font size for character type */
+            font-weight: bold;
+        }
+
+        .group2 {
+            display: flex;
+            justify-content: space-between;
+            gap: 40px; /* Increased gap between character and chart */
+            margin: 20px 0;
+        }
+
+        /* Chart container styles */
+        .chart {
+            margin-left: auto; /* Push chart to the right */
+            padding-right: 20px; /* Add some padding on the right */
+        }
+
+        .chartCard {
+            width: 340px; /* Slightly increased width */
+            background: rgba(255, 255, 255, 0.2);
+            padding: 20px;
+            border-radius: 10px;
+        }
+
+        .chartBox {
+            padding: 20px;
+            border-radius: 10px;
+            background-color: #ffffff37;
+            border: solid #fff;
+        }
+
+        .group {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            width: 100%;
         }
     </style>
 
@@ -430,71 +486,90 @@
                     <div  class="group2"> <!-- Charater & Chart -->
                         <div><!-- Character -->
                             <h4 class="chakra-petch-regular">Character</h4>  
-                            <div class="Character" style="height: 300px; width: 300px;">
+                            <div class="Character">
                                 <% if(BasicPercent === 0 && TracePercent === 0 && ExplainPercent === 0 && WritePercent === 0){ %>
-                                    <img src="/images/IMG_3241.png" alt="Knowledge" style=" width: 200px; height: 200px;">
+                                    <img src="/images/IMG_3241.png" alt="Rookie">
                                     <p style="margin-bottom: 0px;"><b>ROOKIE</b>
                                     <p>Rookie</p>
                                 <% } else { %> 
                                 <% if(BasicPercent > TracePercent && BasicPercent > ExplainPercent && BasicPercent > WritePercent){ %>
-                                    <img src="/images/IMG_3171.webp" alt="Knowledge" style=" width: 200px; height: 200px;">
+                                    <img src="/images/IMG_3171.webp" alt="Knowledge">
                                     <p style="margin-bottom: 0px;"><b>KN</b>
                                     <p>Knowledge</p>
                                 <% } %> 
                                 <% if(BasicPercent === TracePercent && BasicPercent > ExplainPercent && BasicPercent > WritePercent){ %>
-                                    k = t
+                                    <img src="/images/IMG_3170.png" alt="Knowledge">
+                                    <p style="margin-bottom: 0px;"><b>KNTR</b>
+                                    <p>Knowledge + Tracing</p>
                                 <% } %> 
                                 <% if(BasicPercent > TracePercent && BasicPercent === ExplainPercent && BasicPercent > WritePercent){ %>
-                                    k = e
+                                    <img src="/images/IMG_3169.png" alt="Knowledge">
+                                    <p style="margin-bottom: 0px;"><b>KNEX</b>
+                                    <p>Knowledge + Explaining</p>
                                 <% } %> 
                                 <% if(BasicPercent > TracePercent && BasicPercent > ExplainPercent && BasicPercent === WritePercent){ %>
-                                    k = w
+                                    <img src="/images/IMG_3168.png" alt="Knowledge">
+                                    <p style="margin-bottom: 0px;"><b>KNWR</b>
+                                    <p>Knowledge + Writing</p>
                                 <% } %> 
                                 <% if(BasicPercent === TracePercent && BasicPercent === ExplainPercent && BasicPercent > WritePercent){ %>
-                                    k = t = e
+                                    <img src="/images/IMG_3167.png" alt="Knowledge">
+                                    <p style="margin-bottom: 0px;"><b>KNTREX</b>
+                                    <p>Knowledge + Tracing + Explaining</p>
                                 <% } %> 
                                 <% if(BasicPercent === TracePercent && BasicPercent > ExplainPercent && BasicPercent === WritePercent){ %>
-                                    k = t = w
+                                    <img src="/images/IMG_3166.png" alt="Knowledge">
+                                    <p style="margin-bottom: 0px;"><b>KNTRWR</b>
+                                    <p>Knowledge + Tracing + Writing</p>
                                 <% } %> 
                                 <% if(BasicPercent > TracePercent && BasicPercent === ExplainPercent && BasicPercent === WritePercent){ %>
-                                    k = e = w
+                                    <img src="/images/IMG_3165.png" alt="Knowledge">
+                                    <p style="margin-bottom: 0px;"><b>KNEXWR</b>
+                                    <p>Knowledge + Explaining + Writing</p>
                                 <% } %> 
                                 
                                 <!-- t -->
                                 <% if(TracePercent > BasicPercent && TracePercent > ExplainPercent && TracePercent > WritePercent){ %>
-                                    <img src="/images/IMG_3178.png" alt="Knowledge" style=" width: 200px; height: 200px;">
+                                    <img src="/images/IMG_3178.png" alt="Tracing">
                                     <p style="margin-bottom: 0px;"><b>TR</b>
                                     <p>Tracing</p>
                                 <% } %> 
                                 <% if(TracePercent > BasicPercent && TracePercent === ExplainPercent && TracePercent > WritePercent){ %>
-                                    t = e
+                                    <img src="/images/IMG_3176.png" alt="Tracing">
+                                    <p style="margin-bottom: 0px;"><b>TREX</b>
+                                    <p>Tracing + Explaining</p>
                                 <% } %> 
                                 <% if(TracePercent > BasicPercent && TracePercent > ExplainPercent && TracePercent === WritePercent){ %>
-                                    t = w
+                                    <img src="/images/IMG_3175.png" alt="Tracing">
+                                    <p style="margin-bottom: 0px;"><b>TRWR</b>
+                                    <p>Tracing + Writing</p>
                                 <% } %> 
                                 <% if(TracePercent > BasicPercent && TracePercent === ExplainPercent && TracePercent === WritePercent){ %>
-                                    t = e = w
+                                    <img src="/images/IMG_3173.png" alt="Tracing">
+                                    <p style="margin-bottom: 0px;"><b>TREXWR</b>
+                                    <p>Tracing + Explaining + Writing</p>
                                 <% } %> 
 
                                 <!-- e -->
                                 <% if(ExplainPercent > BasicPercent && ExplainPercent > TracePercent && ExplainPercent > WritePercent){ %>
-                                    <img src="/images/IMG_3239.png" alt="Knowledge" style=" width: 200px; height: 200px;">
+                                    <img src="/images/IMG_3239.png" alt="Explaining">
                                     <p style="margin-bottom: 0px;"><b>EX</b>
                                     <p>Explaining</p>
                                 <% } %>
                                 <% if(ExplainPercent > BasicPercent && ExplainPercent > TracePercent && ExplainPercent === WritePercent){ %>
-                                    e = w
+                                    <img src="/images/IMG_3236.png" alt="Explaining">
+                                    <p style="margin-bottom: 0px;"><b>EXWR</b>
+                                    <p>Explaining + Writing</p>
                                 <% } %>
 
                                 <!-- w -->
                                 <% if(WritePercent > BasicPercent && WritePercent > TracePercent && WritePercent > ExplainPercent){ %>
-                                    <img src="/images/IMG_3232.png" alt="Knowledge" style=" width: 200px; height: 200px;">
+                                    <img src="/images/IMG_3232.png" alt="Writing">
                                     <p style="margin-bottom: 0px;"><b>WR</b>
                                     <p>Writing</p>
                                 <% } %>
                                 <% if(WritePercent === BasicPercent && WritePercent === TracePercent && WritePercent === ExplainPercent){ %>
-                                    k = t = e = w
-                                    <img src="/images/IMG_3242.png" alt="Knowledge" style=" width: 200px; height: 200px;">
+                                    <img src="/images/IMG_3242.png" alt="KING">
                                     <p style="margin-bottom: 0px;"><b>KING</b>
                                     <p>King</p>
                                 <% } %>
@@ -505,7 +580,7 @@
                         <div class="chart">
                             <h4 class="chakra-petch-regular">Competency</h4>   
                             <div>
-                                <div class="chartCard" style="width: 300px;">
+                                <div class="chartCard">
                                     <div class="chartBox" style="background-color: #ffffff37; border: solid #fff;">
                                         <canvas id="myChart"></canvas>
                                     </div>
