--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -49,6 +49,7 @@
               <li class="nav-item "><a class="nav-link" href="/class" style="color: #ffffff;">Class </a></li>
               <li class="nav-item "><a class="nav-link" href="/check" style="color: #ffffff;">Lab-Check </a></li>
               <li class="nav-item "><a class="nav-link" href="/checkQuiz" style="color: #ffffff;">Quiz-Check </a></li>
+              <li class="nav-item "><a class="nav-link" href="/community" style="color: #ffffff;">Chat</a></li>
             </ul>
             <ul class="navbar-nav mb-0 ms-auto">
               <li class="nav-item nav-link" style="color: #ffffff;" ><%= user.name %></li>
