--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -48,23 +48,20 @@
             opacity: 0.6;
         }
         .Character {
-            width: 400px; /* Increased from 300px */
-            height: 400px; /* Increased from 300px */
+            width: 28rem;
+            height: 36rem;
             background-color: #f1f1f1;
-            border-radius: 10px;
+            border-radius: 0.5rem;
+            padding: 1rem;
             display: flex;
-            flex-direction: column;
-            justify-content: center;
             align-items: center;
-            text-align: center;
-            padding: 20px;
+            justify-content: center;
         }
 
-        /* Adjust character image size */
         .Character img {
-            width: 300px !important; /* Increased from 200px */
-            height: 300px !important; /* Increased from 200px */
-            margin-bottom: 10px;
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
         }
 
         /* Character text styles */
@@ -486,20 +483,18 @@
                         </div><br>
                     </div>
                     <div  class="group2"> <!-- Charater & Chart -->
-                        <div><!-- Character -->
+                        <div class="character-box"><!-- Character -->
                             <h4 class="chakra-petch-regular">Character</h4>  
                             <div class="Character">
                                 <% if(BasicPercent === 0 && TracePercent === 0 && ExplainPercent === 0 && WritePercent === 0){ %>
-                                    <img src="/images/IMG_3241.png" alt="Rookie">
-                                    <p style="margin-bottom: 0px;"><b>ROOKIE</b>
-                                    <p>Rookie</p>
+                                    <img src="/images/6.png" alt="Rookie">
+                                    <p style="margin-bottom: 0px;">
                                 <% } else { %> 
                                 <% if(BasicPercent > TracePercent && BasicPercent > ExplainPercent && BasicPercent > WritePercent){ %>
-                                    <img src="/images/IMG_3171.webp" alt="Knowledge">
-                                    <p style="margin-bottom: 0px;"><b>KN</b>
-                                    <p>Knowledge</p>
+                                    <img src="/images/1.webp" alt="Knowledge">
+                                    <p style="margin-bottom: 0px;">
                                 <% } %> 
-                                <% if(BasicPercent === TracePercent && BasicPercent > ExplainPercent && BasicPercent > WritePercent){ %>
+                                <!-- <% if(BasicPercent === TracePercent && BasicPercent > ExplainPercent && BasicPercent > WritePercent){ %>
                                     <img src="/images/IMG_3170.png" alt="Knowledge">
                                     <p style="margin-bottom: 0px;"><b>KNTR</b>
                                     <p>Knowledge + Tracing</p>
@@ -528,15 +523,14 @@
                                     <img src="/images/IMG_3165.png" alt="Knowledge">
                                     <p style="margin-bottom: 0px;"><b>KNEXWR</b>
                                     <p>Knowledge + Explaining + Writing</p>
-                                <% } %> 
+                                <% } %>  -->
                                 
                                 <!-- t -->
                                 <% if(TracePercent > BasicPercent && TracePercent > ExplainPercent && TracePercent > WritePercent){ %>
-                                    <img src="/images/IMG_3178.png" alt="Tracing">
-                                    <p style="margin-bottom: 0px;"><b>TR</b>
-                                    <p>Tracing</p>
+                                    <img src="/images/2.png" alt="Tracing">
+                                    <p style="margin-bottom: 0px;">
                                 <% } %> 
-                                <% if(TracePercent > BasicPercent && TracePercent === ExplainPercent && TracePercent > WritePercent){ %>
+                                <!-- <% if(TracePercent > BasicPercent && TracePercent === ExplainPercent && TracePercent > WritePercent){ %>
                                     <img src="/images/IMG_3176.png" alt="Tracing">
                                     <p style="margin-bottom: 0px;"><b>TREX</b>
                                     <p>Tracing + Explaining</p>
@@ -550,30 +544,27 @@
                                     <img src="/images/IMG_3173.png" alt="Tracing">
                                     <p style="margin-bottom: 0px;"><b>TREXWR</b>
                                     <p>Tracing + Explaining + Writing</p>
-                                <% } %> 
+                                <% } %>  -->
 
                                 <!-- e -->
                                 <% if(ExplainPercent > BasicPercent && ExplainPercent > TracePercent && ExplainPercent > WritePercent){ %>
-                                    <img src="/images/IMG_3239.png" alt="Explaining">
-                                    <p style="margin-bottom: 0px;"><b>EX</b>
-                                    <p>Explaining</p>
+                                    <img src="/images/3.png" alt="Explaining">
+                                    <p style="margin-bottom: 0px;">
                                 <% } %>
-                                <% if(ExplainPercent > BasicPercent && ExplainPercent > TracePercent && ExplainPercent === WritePercent){ %>
+                                <!-- <% if(ExplainPercent > BasicPercent && ExplainPercent > TracePercent && ExplainPercent === WritePercent){ %>
                                     <img src="/images/IMG_3236.png" alt="Explaining">
                                     <p style="margin-bottom: 0px;"><b>EXWR</b>
                                     <p>Explaining + Writing</p>
-                                <% } %>
+                                <% } %> -->
 
                                 <!-- w -->
                                 <% if(WritePercent > BasicPercent && WritePercent > TracePercent && WritePercent > ExplainPercent){ %>
-                                    <img src="/images/IMG_3232.png" alt="Writing">
-                                    <p style="margin-bottom: 0px;"><b>WR</b>
-                                    <p>Writing</p>
+                                    <img src="/images/4.png" alt="Writing">
+                                    <p style="margin-bottom: 0px;">
                                 <% } %>
                                 <% if(WritePercent === BasicPercent && WritePercent === TracePercent && WritePercent === ExplainPercent){ %>
-                                    <img src="/images/IMG_3242.png" alt="KING">
-                                    <p style="margin-bottom: 0px;"><b>KING</b>
-                                    <p>King</p>
+                                    <img src="/images/5.png" alt="KING">
+                                    <p style="margin-bottom: 0px;">
                                 <% } %>
                                 <% } %>
                             </div>
