--- a/views/student/course/7_Arrays_and_Strings-course.ejs
+++ b/views/student/course/7_Arrays_and_Strings-course.ejs
@@ -915,7 +915,7 @@
                 <div class="game"></div>
                 <!--* 1 *-->
                 <div class="gamecontent-W">
-                    <h5 style="text-align: left;">1.ให้เขียน Flowchart (Block-based Programming) ของ Algorithm นี้ </h5>
+                    <h5 style="text-align: left;">1. ให้เขียนโปรแกรมรับคะแนนนักเรียน 5 คน แล้วหาค่าเฉลี่ย </h5>
                     <iframe src="https://drive.google.com/file/d/1wVY9u-I_Ngc3m7JRO1RiuI49h5wKe5re/preview" width="550" height="500" allow="autoplay"></iframe>                    
                     <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
                 </div>
@@ -929,7 +929,7 @@
 
                 <!--* 2 *-->
                 <div class="gamecontent-W">
-                    <h5 style="text-align: left;">2. ให้เขียน Flowchart (Block-based Programming) ของ Algorithm นี้</h5>
+                    <h5 style="text-align: left;">2. ให้เขียนโปรแกรมรับคะแนนนักเรียน 3 คน สอบ 2 วิชา แล้วหาค่าเฉลี่ยแต่ละคน</h5>
                     <iframe src="https://drive.google.com/file/d/1Bbf_Qz9IbM_zg2ZT01yoWPY1jCzvkmMX/preview" width="550" height="500" allow="autoplay"></iframe>                    
                     <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
                 </div>
@@ -943,7 +943,7 @@
 
                 <!--* 3 *-->
                 <div class="gamecontent-W">
-                    <h5 style="text-align: left;">3. ให้เขียน Flowchart (Block-based Programming) ของ Algorithm นี้</h5>
+                    <h5 style="text-align: left;">3. ให้เขียนโปรแกรมรับคะแนนนักเรียน 2 ห้อง ห้องละ 3 คน คนละ 2 วิชา</h5>
                     <iframe src="https://drive.google.com/file/d/1KSy6KicgsmobBq6RiPVpQ4uoCtqwk2rP/preview" width="550" height="500" allow="autoplay"></iframe>                    
                     <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
                 </div>
@@ -957,7 +957,7 @@
 
                 <!--* 4 *-->
                 <div class="gamecontent-W">
-                    <h5 style="text-align: left;">4. ให้เขียน Flowchart (Block-based Programming) ของ Algorithm นี้</h5>
+                    <h5 style="text-align: left;">4. ให้เขียนโปรแกรมหาค่าสูงสุด ต่ำสุด และค่าเฉลี่ยใน Array 1 มิติ</h5>
                     <iframe src="https://drive.google.com/file/d/12z5f0BApIa1DXqceUhxOIyzfXe4Zop3j/preview" width="550" height="500" allow="autoplay"></iframe>                    
                     <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
                 </div>
@@ -971,7 +971,7 @@
 
                 <!--* 5 *-->
                 <div class="gamecontent-W">
-                    <h5 style="text-align: left;">5. ให้เขียน Flowchart (Block-based Programming) ของ Algorithm นี้</h5>
+                    <h5 style="text-align: left;">5. ให้เขียนโปรแกรมหาผลรวมของแถวและหลักในเมทริกซ์</h5>
                     <iframe src="https://drive.google.com/file/d/15Fz-MNMNPqwVZH93Z3pADa9aC7FJppLv/preview" width="550" height="500" allow="autoplay"></iframe>                    
                     <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
                 </div>
@@ -985,7 +985,7 @@
 
                 <!--* 6 *-->
                 <div class="gamecontent-W">
-                    <h5 style="text-align: left;">6. ให้เขียน Flowchart (Block-based Programming) ของ Algorithm นี้</h5>
+                    <h5 style="text-align: left;">6. ให้เขียนโปรแกรมเก็บและแสดงคะแนนสอบของนักเรียนหลายห้องในหลายวิชา</h5>
                     <iframe src="https://drive.google.com/file/d/1_pTzMx0s_F07SKd9CEBJ76AIoAl1jTFi/preview" width="550" height="500" allow="autoplay"></iframe>                    
                     <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
                 </div>
@@ -1000,7 +1000,7 @@
 
                 <!--* 7 *-->
                 <div class="gamecontent-W">
-                    <h5 style="text-align: left;">7. ให้เขียน Flowchart (Block-based Programming) ของ Algorithm นี้</h5>
+                    <h5 style="text-align: left;">7. ให้เขียนโปรแกรมจัดเรียงรายชื่อนักเรียนพร้อมคะแนน</h5>
                     <iframe src="https://drive.google.com/file/d/10LuDZ-Sa2FT8YV55LoI01dGU7kXue-Zi/preview" width="550" height="500" allow="autoplay"></iframe>                    
                     <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
                 </div>
@@ -1015,7 +1015,7 @@
 
                 <!--* 8 *-->
                 <div class="gamecontent-W">
-                    <h5 style="text-align: left;">8. ให้เขียน Flowchart (Block-based Programming) ของ Algorithm นี้</h5>
+                    <h5 style="text-align: left;">8. ให้โปรแกรมตรวจสอบความยาวและทำตัวพิมพ์ใหญ่</h5>
                     <iframe src="https://drive.google.com/file/d/1h4tn5mjXEhtVjHmiy2XRhxLEybr6OLIu/preview" width="550" height="500" allow="autoplay"></iframe>                    
                     <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
                 </div>
@@ -1029,30 +1029,30 @@
 
                 <!--* 9 *-->
                 <div class="gamecontent-W">
-                    <h5 style="text-align: left;">9. ให้เขียน Flowchart (Block-based Programming) ของ Algorithm นี้</h5>
+                    <h5 style="text-align: left;">9. ให้เขียนโปรแกรมเปรียบเทียบและต่อ string</h5>
                     <iframe src="https://drive.google.com/file/d/1Gi3ZBDyptxT5N7kFSgdxoJsrKbDoOmR1/preview" width="550" height="500" allow="autoplay"></iframe>                    
                     <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
                 </div>
                 <div class="gamecontent-W">
                     <button class="btn btn-info" onclick="myFunction9()">คลิกเพื่อดูเฉลย</button>
                     <div id="myDIV9" style="margin-top: 10px; display:none; align-items: flex-end;">
-                        <iframe src="https://drive.google.com/file/d/1a_-1N245NO_hUdo7N3VVyFMjRqwUt3XD/preview" width="640" height="480" allow="autoplay"></iframe>
-                        <iframe src="https://drive.google.com/file/d/18jHOwsMEKEZ277bhHmdkSUfXadJxdT6M/preview" width="640" height="480" allow="autoplay"></iframe>
-                        <iframe src="https://drive.google.com/file/d/1FnrRokPQiF3_kZldEcOQXv5AI-wkoGjc/preview" width="400" height="480" allow="autoplay"></iframe>
+                        <iframe src="" width="640" height="480" allow="autoplay"></iframe>
+                        <iframe src="" width="640" height="480" allow="autoplay"></iframe>
+                        <iframe src="" width="400" height="480" allow="autoplay"></iframe>
                     </div>
                 </div>
 
                 <!--* 10 *-->
                 <div class="gamecontent-W">
-                    <h5 style="text-align: left;">10. ให้เขียน Flowchart (Block-based Programming) ของ Algorithm นี้</h5>
+                    <h5 style="text-align: left;">10. ให้เขียนโปรแกรมรวมชื่อและนามสกุลแล้วแปลงเป็นตัวพิมพ์ใหญ่</h5>
                     <iframe src="https://drive.google.com/file/d/1UGcGN5lW5A7Uy3MpFnz1qF4eizzCk8VW/preview" width="550" height="500" allow="autoplay"></iframe>                    
                     <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
                 </div>
                 <div class="gamecontent-W">
                     <button class="btn btn-info" onclick="myFunction10()">คลิกเพื่อดูเฉลย</button>
                     <div id="myDIV10" style="margin-top: 10px; display:none; align-items: flex-end;">
-                        <iframe src="https://drive.google.com/file/d/1z5jtKfxeA9oRMAMyTedKwlMDeNA2mCV5/preview" width="640" height="480" allow="autoplay"></iframe>
-                        <iframe src="https://drive.google.com/file/d/1kkrCxoBZ9ZBi_CCx620F6ur8WqmFQTiu/preview" width="400" height="480" allow="autoplay"></iframe>
+                        <iframe src="" width="640" height="480" allow="autoplay"></iframe>
+                        <iframe src="" width="400" height="480" allow="autoplay"></iframe>
                     </div>
                 </div>
 
