--- a/views/student/course/1_Algorithms_and_Flowcharts-course.ejs
+++ b/views/student/course/1_Algorithms_and_Flowcharts-course.ejs
@@ -64,6 +64,9 @@
                 <a href="/course-Algorithms_and_Flowcharts#Explaining" class="scrollbtnE"  type="button"  >
                     Explaining
                 </a>
+                <a href="/course-Algorithms_and_Flowcharts#Writing" class="scrollbtnW" type="button"  >
+                    Writing
+                </a>
 
             <iframe src="https://drive.google.com/file/d/1j-j4vRFByoAeDQJKULoLMuMRXWvxLbUh/preview" width="100%" height="820" allow="autoplay" ></iframe>
             <br><br><h4>วิธีเขียน Algorithms และ Flowcharts 🔥</h4>
@@ -1239,8 +1242,7 @@
         <br><br>
         <button onclick="window.location.href='/course-Algorithms_and_Flowcharts-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
         <h4>แบบทดสอบหลังเรียน</h4></button>
-        
-
+        <br><br>
         
 
         <br></div>
