--- a/views/student/course/suiigame.ejs
+++ b/views/student/course/suiigame.ejs
@@ -32,23 +32,28 @@
 <body>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
-        .breadcrumb {
-            margin-bottom: 0;
-            background-color: white;
-            }
-        .blockquote-footer {
-            color:black;
+        .topbar{
+            height: 70px;
+            width: 100%;
+            background-color: aqua;
+            padding-top: 10px;
+            text-align: center;
+        }
+        .content-area {
+            padding: 50px;
         }
     </style>
-    <a id="Token"></a>
-    <div class="content">
-        <div id = "content" class="container"><br><br>
-          <h1>SUiiGAME</h1>
-        </div>
+
+    <div class="topbar">
+        <h1>SUiiGAME</h1>
+    </div>
+
+    <div class="content-area">
+        <img style="height: 300px;" src="https://cdn-icons-png.flaticon.com/512/9399/9399670.png" alt="">
     </div>
 
 
-    <!-- END Of MIDDLE  -->
+
     </body>
 </html>
 
