--- a/views/student/course/7_Arrays_and_Strings-course.ejs
+++ b/views/student/course/7_Arrays_and_Strings-course.ejs
@@ -65,7 +65,7 @@
             </a>
 
             <div class="accordion" id="accordionParentSyntax">
-                <!-- <iframe src="" width="100%" height="820" allow="autoplay"></iframe> -->
+                <iframe src="https://drive.google.com/file/d/1lZBRBv7T3KMzjMynBao4F7BGu1R5xJAq/preview" width="100%" height="820" allow="autoplay"></iframe>
                 <br><br><h4>ใช้งานอาร์เรย์ Array ระบุตำแหน่ง Index 🔥</h4>
                 <iframe width="100%" height="600" src="https://www.youtube.com/embed/ExueZI39aaA?si=kN0awYkMCfslQ4ZY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <br><br><h4>สร้างคำสั่ง Array 1 มิติ One Dimensional Array 🔥</h4>
