--- a/views/student/course/8_Functions-course.ejs
+++ b/views/student/course/8_Functions-course.ejs
@@ -65,7 +65,7 @@
 
 
             <div class="accordion" id="accordionParentSyntax">
-                <!-- <iframe src="" width="100%" height="820" allow="autoplay"></iframe> -->
+                <iframe src="https://drive.google.com/file/d/1SsJji7j1TVEBLAKU8Vc2y8V5CMuCCk-A/preview" width="100%" height="820" allow="autoplay"></iframe>
                 <br><br><h4>สร้างฟังก์ชันใช้เอง Functions 🔥</h4>
                 <iframe width="100%" height="600" src="https://www.youtube.com/embed/GunI8Uga3hs?si=VrhwdcCO5blXyXzA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
@@ -1122,7 +1122,8 @@
                         <iframe src="https://drive.google.com/file/d/1KhgxzrwCuH9lSez84_D7nA5hFvaNrxxI/preview" width="640" height="480" allow="autoplay"></iframe>
                     </div>
                 </div>
-
+            </div>
+                <div class="game">
                 <!--* 8 *-->
                 <div class="gamecontent-W">
                     <h5 style="text-align: left;">8. ให้เขียนโปรแกรมคำนวณดัชนีมวลกาย (BMI) โดยใช้ฟังก์ชันแบบผสม</h5>
